Stretch goal: fixed nav complete

--- a/css/index.css
+++ b/css/index.css
@@ -172,21 +172,29 @@ p {
 .nav-container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
+  padding: 15px;
   font-size: 1.5rem;
+  background-color: black;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  margin: 0 auto 20px auto;
+  opacity: 0.7;
 }
 .nav-container h1 {
   font-size: 3rem;
   margin-bottom: 10px;
+  color: white;
 }
 .nav-container a {
   text-decoration: none;
   color: black;
   margin: 20px 7px 10px 7px;
+  color: white;
 }
 footer {
   color: #22283B;
@@ -205,6 +213,7 @@ footer {
 }
 .home .intro {
   max-width: 100%;
+  margin-top: 100px;
 }
 .home .intro h2 {
   padding: 15px;
