--- a/less/home-page.less
+++ b/less/home-page.less
@@ -9,7 +9,7 @@
 
   .intro {
     max-width: 100%;
-
+    margin-top: 100px;
     h2 {
       padding: 15px;
     }
