--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,19 +1,28 @@
 .nav-container {
     max-width: 800px;
     width: 100%;
-    margin: 0 auto;
     .flex-col();
     align-items: center;
-    padding: 10px;
+    padding: 15px;
     font-size: 1.5rem;
+    background-color: black;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    margin: 0 auto 20px auto;
+    opacity: 0.7;
 
     h1 {
         font-size: 3rem;
         margin-bottom: 10px;
+        color: white;
+
     }
 
     a {
         .a-def();
         margin: 20px 7px 10px 7px;
+        color: white;
     }
 }
